fix async accept + add basic nio scalability test (#163)
* fix async accept + add basic nio scalability test

* Add java export to maven surfire plugin to make test compiling happy

---------

Co-authored-by: Balint Molnar <balintmolnar91@gmail.com>